# Mannager_Homework

./: .gitignore  CMakeLists.txt  README.md
part_3/: t2.c  test_101.c  test_126.c  test_127.c  test_128.c  test_129.c  test_144.c  test_15.c  test_16.c  test_17.c  test_186.c  test_187.c  test_188.c  test_19.c  test_20.c  test_205.c  test_206.c  test_208.c  test_210.c  test_211.c  test_212.c  test_213.c  test_214.c  test_215.c  test_218.c  test_221.c  test_249.c  test_252.c  test_253.c  test_268.c  test_275.c  test_276.cpp  test_49.c  test_92.c  test_94.c  tset_209.c
part_4/: test_108.c  test_110.c  test_131.c  test_132.c  test_143.c  test_157.c  test_189.c  test_190.c  test_37.c  test_48.c  test_50.c  test_52.c  test_75.c  test_78.c  test_93.c  test_99.c
