cmake_minimum_required(VERSION 3.29)
project(Mannager_Homework)

set(CMAKE_CXX_STANDARD 14)

add_executable(test_15 part_3/test_15.c)
add_executable(test_19 part_3/test_19.c)
add_executable(test_20 part_3/test_20.c)
add_executable(test_49 part_3/test_49.c)
add_executable(test_94 part_3/test_94.c)
add_executable(test_126 part_3/test_126.c)
add_executable(test_127 part_3/test_127.c)
add_executable(test_129 part_3/test_129.c)
add_executable(test_144 part_3/test_144.c)
add_executable(test_186 part_3/test_186.c)
add_executable(test_125 part_3/test_205.c)
add_executable(test_206 part_3/test_206.c)
add_executable(test_208 part_3/test_208.c)
add_executable(tset_209 part_3/tset_209.c)
add_executable(test_210 part_3/test_210.c)
add_executable(test_213 part_3/test_213.c)
add_executable(test_215 part_3/test_215.c)
add_executable(test_249 part_3/test_249.c)
add_executable(test_276 part_3/test_276.c)
add_executable(test_16 part_3/test_16.c)
add_executable(test_17 part_3/test_17.c)
add_executable(test_92 part_3/test_92.c)
add_executable(test_101 part_3/test_101.c)
add_executable(test_275 part_3/test_275.c)
add_executable(test_253 part_3/test_253.c)
add_executable(test_268 part_3/test_268.c)
add_executable(test_128 part_3/test_128.c)
add_executable(test_187 part_3/test_187.c)
add_executable(test_188 part_3/test_188.c)
add_executable(test_211 part_3/test_211.c)
add_executable(test_212 part_3/test_212.c)
add_executable(test_214 part_3/test_214.c)
add_executable(test_218 part_3/test_218.c)
add_executable(test_221 part_3/test_221.c)
add_executable(test_252 part_3/test_252.c)
add_executable(test1 part_4/test_93.c)
add_executable(test_93 part_4/test_93.c)
add_executable(test_143 part_4/test_143.c)